--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Bijeshniroula.GitHub.io</h1>
+          <h1>Bijesh Niroula</h1>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/samaay8">samaay8</a></span>
