--- a/index.html
+++ b/index.html
@@ -1,71 +1,309 @@
-<!doctype html>
-<html>
-  <head>
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
+<!-- HEAD SECTION -->
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Bijeshniroula.GitHub.io by samaay8</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!--[if IE]>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <![endif]-->
+    <title>Bijesh Niroula</title>
+    <!--GOOGLE FONT -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <!--BOOTSTRAP MAIN STYLES -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet" />
+    <!--FONTAWESOME MAIN STYLE -->
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+    <!--CUSTOM STYLE -->
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+</head>
+    <!--END HEAD SECTION -->
+<body>
+     <!-- NAV SECTION -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">BIJESH NIROULA</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#header-section">HOME</a></li>
+                    <li><a href="#about-section">ABOUT</a></li>
+                    <li><a href="#products-section">MY-WORK</a></li>
+                    <li><a href="#contact-section">HIRE ME</a></li>
+                    <li><a href="#contact-section">CONTACT</a></li>
+                </ul>
+            </div>
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/samaay8/bijeshniroula.github.io">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/samaay8/bijeshniroula.github.io/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/samaay8/bijeshniroula.github.io/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+        </div>
+    </div>
+     <!--END NAV SECTION -->
+     <!-- HEADER SECTION -->
+    <div id="header-section">
+        <div class="container">
+            <div class="row centered">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1><strong> BIJESH NIROULA</strong>
 
-    <div class="wrapper">
+                    </h1>
+                     <br /> <br /> <br />
+                    <h2> Computer Engineer/Developer</h2>
+                     <br />
+                  <a href="#about-section">  <i class="fa fa-angle-double-down fa-5x down-icon"></i> </a>
+                </div>
+            </div>
 
-      <section>
-        <div id="title">
-          <h1>Bijesh Niroula</h1>
-          <p></p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/samaay8">samaay8</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+    </div>
+      <!--END HEADER SECTION -->
+    <!--ABOUT SECTION -->
+    <div id="about-section" >
+        <div class="container" >
+            <div class="row main-top-margin text-center">
+                <div class="col-md-8 col-md-offset-2 " data-scrollreveal="enter top and move 100px, wait 0.3s">
+                    <h1>Who Am I ?</h1>
+                    <h4>
+                       Bijesh Niroula, currently doing Engineering with the aim to acheive excellence.
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+                    </h4>
+                </div>
+            </div>
+            <!-- ./ Main Heading-->
+            <div class="row main-low-margin text-center">
+                <div class="col-md-3 " data-scrollreveal="enter left and move 100px, wait 0.4s">
+                    <img class="img-circle" src="assets/img/team/team1.png" alt="">
+                    <h4><strong>Bijesh Niroula </strong> </h4>
+                    <p>
+                        ..............................
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+                    </p>
+                    <p>
+                       <a href="#"><i class="fa fa-facebook-square fa-2x color-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter-square fa-2x color-twitter"></i></a>
+                        <a href="#"><i class="fa fa-google-plus-square fa-2x color-google-plus"></i></a>
+                        <a href="#"><i class="fa fa-linkedin-square fa-2x color-linkedin"></i></a>
+                        <a href="#"><i class="fa fa-pinterest-square fa-2x color-pinterest"></i></a>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+                    </p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+                </div>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+                <div class="col-md-7 col-sm-7 col-md-offset-1  text-justify" data-scrollreveal="enter right and move 100px, wait 0.4s">
+                    <!-- <h3> Lorem ipsum dolor sit amet Riopsh</h3> -->
+                    <p>
+                         <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. -->
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+                    </p>
+                    <p>
+                         <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. -->
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+                    </p>
+                </div>
+            </div>
+              <!-- ./ Row Content-->
+        </div>
+    </div>
+    <!-- END ABOUT SECTION -->
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+
+    <!--WORK/PRODUCTS SECTION -->
+    <div id="products-section" >
+         <div class="container" >
+            <div class="row main-top-margin text-center" data-scrollreveal="enter top and move 100px, wait 0.3s">
+                <div class="col-md-8 col-md-offset-2 ">
+                    <h1>Technical Skills</h1>
+                    <h4>
+                       <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. -->
+                    </h4>
+                </div>
+            </div>
+             <!-- ./ Main Heading-->
+             <hr />
+            <div class="row main-low-margin" >
+                <div class="col-md-10  col-md-offset-1 ">
+ <div class="col-md-4 col-sm-4" data-scrollreveal="enter left and move 100px, wait 0.8s">
+                    <img src="assets/img/product/1.jpg" alt="">
+                </div>
+                <div class="col-md-8 " data-scrollreveal="enter right and move 100px, wait 0.4s">
+                    <h4 >  <strong class="color-red">Client Portfolio No # 1 </strong></h4>
+                    <p>
+                        <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. -->
+                    </p>
+                    <p>
+                        <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. -->
+                    </p>
+                    <p>
+                        <i class="fa fa-check"></i> Responsive Design<br />
+                     <i class="fa fa-check"></i> 24x7 Support <br />
+                       <i class="fa fa-check"></i> Well Documented<br />
+                    </p>
+                    <!-- <a href="#" class="btn btn-success" >See Live Demo</a> -->
+                </div>
+                </div>
+
+            </div>
+            <!-- ./ Row Content-->
+            <hr />
+           <div class="row main-low-margin bottam-pad" >
+
+                 <div class="col-md-10  col-md-offset-1 ">
+                <div class="col-md-8 " data-scrollreveal="enter left and move 100px, wait 0.4s">
+                    <h4 >  <strong class="color-red">Client  Portfolio No # 2 </strong></h4>
+                    <p>
+                        <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. -->
+                    </p>
+                    <p>
+                        <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. -->
+                    </p>
+                    <p>
+                        <i class="fa fa-check"></i> Responsive Design<br />
+                     <i class="fa fa-check"></i> 24x7 Support <br />
+                       <i class="fa fa-check"></i> Well Documented<br />
+                    </p>
+                    <a href="#" class="btn btn-danger" > See Live Demo</a>
+                </div>
+                <div class="col-md-4 " data-scrollreveal="enter right and move 100px, wait 0.4s">
+
+                    <img class="img-margin-product" src="assets/img/product/prd1.png" alt="">
+                </div>
+                     </div>
+            </div>
+              <!-- ./ Row Content-->
+        </div>
+    </div>
+    <!--END WORK/PRODUCTS SECTION -->
+    <!--CONTACT SECTION -->
+    <div id="contact-section">
+        <div class="container" >
+            <div class="row main-top-margin text-center">
+                <div class="col-md-8 col-md-offset-2 " data-scrollreveal="enter top and move 100px, wait 0.3s">
+                    <h1>Contact / Hire Me</h1>
+                    <h4>
+                       <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. -->
+                    </h4>
+                </div>
+            </div>
+            <!-- ./ Main Heading-->
+            <div class="row">
+                <div class="col-md-12  col-sm-12 ">
+                    <div class="col-md-6  " data-scrollreveal="enter left and move 100px, wait 0.4s">
+                        <h3> My Location</h3>
+                        <hr />
+                        <p>
+                        Dhapasi-04,<br />
+                            Kathmandu,<br />
+                            Nepal<br />
+                        Call: +9779840064296<br />
+                        Email: faith8.bijesh@gmail.com<br />
+                            </p>
+
+                    </div>
+                    <div class="col-md-6  " data-scrollreveal="enter right and move 100px, wait 0.4s">
+                        <h3>Drop a Line or Hire Me </h3>
+                        <hr />
+                        <form>
+                            <div class="row">
+                                <div class="col-md-6 ">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" required="required" placeholder="Name">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" required="required" placeholder="Email address">
+                                    </div>
+                                </div>
+                            </div>
+                              <div class="row">
+                                <div class="col-md-6 ">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" required="required" placeholder="Subject">
+                                    </div>
+                                </div>
+                                <div class="col-md-6 ">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control"  placeholder="Ref. (IF any)">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 ">
+                                    <div class="form-group">
+                                        <textarea name="message" id="message" required="required" class="form-control" rows="3"  placeholder="Message"></textarea>
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="submit" class="btn btn-primary">Submit Request</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+             <!-- ./ Row Content-->
+        </div>
+    </div>
+    <!--END CONTACT SECTION -->
+    <!--FOOTER SECTION -->
+    <div id="footer">
+        <div class="container">
+            <div class="row ">
+                &copy; 2016 www.bijeshniroula.github.io| All Right Reserved
+
+            </div>
+
+        </div>
 
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+    <!--END FOOTER SECTION -->
+    <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
+    <!-- CORE JQUERY LIBRARY -->
+    <script src="assets/js/jquery.js"></script>
+    <!-- CORE BOOTSTRAP LIBRARY -->
+    <script src="assets/js/bootstrap.min.js"></script>
+     <!-- SCROLL REVEL LIBRARY FOR SCROLLING ANIMATIONS-->
+    <script src="assets/js/scrollReveal.js"></script>
+       <!-- CUSTOM SCRIPT-->
+    <script src="assets/js/custom.js"></script>
+</body>
 </html>
